[workspace]
resolver = "2"

members = [
    "gateway-core",
    "gateway-httpd",
    "gateway-proxy",
    "gateway-server"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
bytes = "1.0"
http = "1.0.0"


[profile.bench]
debug = true